handle add to favourite br room

--- a/FoodPlanner/app/src/main/res/layout/country_items.xml
+++ b/FoodPlanner/app/src/main/res/layout/country_items.xml
@@ -39,6 +39,7 @@
             app:layout_constraintTop_toBottomOf="@+id/countryitemimage" />
 
         <ImageView
+            android:id="@+id/addFavorite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="92dp"
