--- a/FoodPlanner/app/src/main/res/values/colors.xml
+++ b/FoodPlanner/app/src/main/res/values/colors.xml
@@ -6,4 +6,5 @@
     <color name="myprimary2">#F8C878</color>
     <color name="text">#212121</color>
     <color name="icon">#212121</color>
+    <color name="cards">#FBE7C6</color>
 </resources>
