--- a/FoodPlanner/app/src/main/res/layout/activity_login_screen.xml
+++ b/FoodPlanner/app/src/main/res/layout/activity_login_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/foodplannerbackgrounds"
-    tools:context=".LoginScreen">
+    tools:context=".ui.LoginScreen">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -78,23 +78,7 @@
 
 
 
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <CheckBox
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Remember me"
-                    android:layout_centerVertical="true"
-                    android:alpha="0.7" />
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="I Forget My Password"
-                    android:layout_alignParentEnd="true"
-                    android:layout_centerVertical="true"
-                    android:alpha="0.7"/>
-            </RelativeLayout>
+
             <View
                 android:layout_width="wrap_content"
                 android:layout_height="10dp"/>
@@ -157,7 +141,9 @@
                     android:textStyle="bold"/>
 
             </LinearLayout>
-
+            <View
+                android:layout_width="368dp"
+                android:layout_height="42dp"/>
 
 
         </LinearLayout>
