--- a/FoodPlanner/app/src/main/res/layout/activity_main.xml
+++ b/FoodPlanner/app/src/main/res/layout/activity_main.xml
@@ -5,33 +5,85 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/mainactivity"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
-    <FrameLayout
-        android:layout_width="379dp"
-        android:layout_height="479dp"
-        tools:ignore="MissingConstraints" />
-    <Button
-        android:id="@+id/signupbtn"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@drawable/welcome"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="29dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/signuppbtn"
+        android:layout_width="346dp"
+        android:layout_height="60dp"
+        android:layout_marginTop="560dp"
+        android:background="@drawable/main_button"
+        android:elevation="400dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="@string/signbtn"
+        android:textSize="25sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/imageView" />
+
+    <TextView
+        android:id="@+id/textView3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="signup"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="24dp"
+        android:text="Already Have an Account?"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.806"
+        app:layout_constraintHorizontal_bias="0.079"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.994" />
+        app:layout_constraintTop_toBottomOf="@+id/signuppbtn" />
 
-    <Button
-        android:id="@+id/loginbtn"
+    <TextView
+        android:id="@+id/loginnow"
+        android:layout_width="wrap_content"
+        android:layout_height="17dp"
+        android:layout_marginTop="24dp"
+        android:text="Login"
+        android:textColor="@color/myprimary"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/signuppbtn" />
+
+    <TextView
+        android:id="@+id/textView6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="login"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginTop="24dp"
+        android:text="OR"
+        android:textColor="@color/black"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.049"
+        app:layout_constraintHorizontal_bias="0.742"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signupbtn"
-        app:layout_constraintVertical_bias="0.991" />
+        app:layout_constraintTop_toBottomOf="@+id/signuppbtn" />
+
+    <TextView
+        android:id="@+id/guest"
+        android:layout_width="wrap_content"
+        android:layout_height="18dp"
+        android:layout_marginTop="24dp"
+        android:text="Skip"
+        android:textColor="@color/myprimary"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintStart_toEndOf="@+id/textView3"
+        app:layout_constraintTop_toBottomOf="@+id/signuppbtn" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
