--- a/FoodPlanner/app/src/main/res/layout/activity_main_screen.xml
+++ b/FoodPlanner/app/src/main/res/layout/activity_main_screen.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:id="@+id/drawer_layout"
     android:layout_height="match_parent"
-    tools:context=".MainScreen">
+    tools:context=".ui.MainScreen">
 
     <fragment
         android:id="@+id/homelayout"
@@ -30,11 +30,11 @@
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottomnavigation"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="410dp"
+        android:layout_height="67dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/my_menu"/>
+        app:menu="@menu/my_menu" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.drawerlayout.widget.DrawerLayout>
