--- a/FoodPlanner/app/src/main/res/layout/country_items.xml
+++ b/FoodPlanner/app/src/main/res/layout/country_items.xml
@@ -33,6 +33,7 @@
             android:layout_marginTop="15dp"
             android:textColor="@color/black"
             android:textSize="15dp"
+            android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.496"
             app:layout_constraintStart_toStartOf="parent"
