--- a/FoodPlanner/app/src/main/res/layout/ingredient_card.xml
+++ b/FoodPlanner/app/src/main/res/layout/ingredient_card.xml
@@ -7,25 +7,23 @@
     android:id="@+id/ingrdentcard"
     app:cardCornerRadius="20dp"
     android:elevation="20dp"
-    android:backgroundTint="@color/myprimary">
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp"
+    android:layout_marginBottom="10dp"
+    android:backgroundTint="@color/cards">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/ingrdentimage"
-            android:layout_width="116dp"
-            android:layout_height="68dp"
-            android:scaleType="fitXY"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
         <TextView
             android:id="@+id/ingrdenttv"
-            android:layout_width="76dp"
-            android:layout_height="51dp"
+            android:layout_width="97dp"
+            android:layout_height="108dp"
+            android:textSize="18sp"
+            android:gravity="center"
+            android:fontFamily="sans-serif-medium"
+            android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
