--- a/FoodPlanner/app/src/main/res/layout/activity_main.xml
+++ b/FoodPlanner/app/src/main/res/layout/activity_main.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/welcome"
-        tools:layout_editor_absoluteX="42dp"
-        tools:layout_editor_absoluteY="29dp" />
+        tools:layout_editor_absoluteX="0dp"
+        tools:layout_editor_absoluteY="16dp" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/signuppbtn"
@@ -46,15 +46,15 @@
 
     <TextView
         android:id="@+id/loginnow"
-        android:layout_width="wrap_content"
-        android:layout_height="17dp"
+        android:layout_width="45dp"
+        android:layout_height="25dp"
         android:layout_marginTop="24dp"
         android:text="Login"
         android:textColor="@color/myprimary"
         android:textSize="16sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.055"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/signuppbtn" />
 
@@ -73,15 +73,15 @@
 
     <TextView
         android:id="@+id/guest"
-        android:layout_width="wrap_content"
-        android:layout_height="18dp"
-        android:layout_marginTop="24dp"
-        android:text="Skip"
+        android:layout_width="50dp"
+        android:layout_height="29dp"
+        android:layout_marginTop="20dp"
+        android:text="Guest"
         android:textColor="@color/myprimary"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.686"
+        app:layout_constraintHorizontal_bias="0.755"
         app:layout_constraintStart_toEndOf="@+id/textView3"
         app:layout_constraintTop_toBottomOf="@+id/signuppbtn" />
 
