--- a/FoodPlanner/app/src/main/res/layout/activity_meal_detail.xml
+++ b/FoodPlanner/app/src/main/res/layout/activity_meal_detail.xml
@@ -21,6 +21,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/mealimage" />
 
+    <Button
+        android:id="@+id/add"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:text="Add Meal To Favourites"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.535"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/mealimage" />
+
     <TextView
         android:id="@+id/mealname"
         android:layout_width="178dp"
@@ -59,7 +70,7 @@
         app:layout_constraintBottom_toTopOf="@+id/mealcountry"
         app:layout_constraintStart_toEndOf="@+id/textView5"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.804" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/mealcountry"
@@ -86,17 +97,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
-        android:id="@+id/add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
-        android:background="@drawable/favorite"
-        app:layout_constraintBottom_toTopOf="@+id/addtoplanbtn"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/mealimage"
-        app:layout_constraintVertical_bias="0.031" />
 
     <TextView
         android:id="@+id/mealingrdients"
