--- a/FoodPlanner/app/src/main/res/layout/activity_login_screen.xml
+++ b/FoodPlanner/app/src/main/res/layout/activity_login_screen.xml
@@ -72,12 +72,22 @@
                 android:layout_height="wrap_content"
                 android:inputType="textPassword"/>
 
-            <View
-                android:layout_width="wrap_content"
-                android:layout_height="20dp" />
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="50dp">
 
+    <CheckBox
+        android:id="@+id/remember"
+        android:layout_width="38dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="200dp" />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Remember me"
+        android:fontFamily="sans-serif-medium"/>
 
-
+</LinearLayout>
 
             <View
                 android:layout_width="wrap_content"
